fix: Use aiosqlite for async database operations
- Change DATABASE_URL to use sqlite+aiosqlite:// instead of sqlite://
- Update docker-compose.yml, .env.production, and settings.py
- Fix 'pysqlite is not async' error by using proper async SQLite driver
- Ensure database path points to ./data/ielts_bot.db

--- a/.env.production
+++ b/.env.production
@@ -12,7 +12,7 @@ OPENROUTER_SITE_URL=https://ielts-telegram-bot.local
 OPENROUTER_SITE_NAME=IELTS Writing Bot
 
 # Database Configuration
-DATABASE_URL=sqlite:///./data/ielts_bot.db
+DATABASE_URL=sqlite+aiosqlite:///./data/ielts_bot.db
 
 # Application Configuration
 DEBUG=False
