feat: Make bot messages prettier with emojis and formatting
- Update bot name to 'Writely Robot' throughout the application
- Add admin ID (433751560) for @bnutfilloyev
- Set up bot commands menu with descriptions
- Add prettier startup message with formatting and emojis
- Update all handler messages with beautiful formatting, emojis, and separators
- Add 'About Writely Robot' section with bot information
- Enhance evaluation result formatting with decorative elements
- Use Markdown formatting (bold, italic) for better visual appeal
- Add decorative separators and structured layouts
- Improve user experience with more engaging messages

--- a/.env.production
+++ b/.env.production
@@ -3,6 +3,7 @@
 
 # Telegram Bot Configuration
 TELEGRAM_BOT_TOKEN=your_production_telegram_bot_token_here
+ADMIN_ID=433751560
 
 # OpenRouter Configuration (AI Service)
 OPENAI_API_KEY=your_openrouter_api_key_here
