feat: Migrate IELTS Telegram Bot from SQLite to PostgreSQL
- Removed the old update script and replaced it with a comprehensive PostgreSQL migration design document.
- Added requirements and tasks documents outlining the migration process and necessary steps.
- Implemented a new database configuration for PostgreSQL, including connection pooling and environment variable management.
- Created a Docker Compose service for PostgreSQL with health checks and persistent storage.
- Developed a migration script to transfer data from SQLite to PostgreSQL, ensuring data integrity and relationship preservation.
- Enhanced error handling for database connections and migrations.
- Updated the bot's handlers to operate without database dependencies, providing a simplified user experience.
- Introduced new enums and services for task type handling and result formatting.
- Comprehensive testing strategy established for database connections, migrations, and performance under load.

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,20 @@ OPENAI_API_KEY=your_openai_api_key_here
 OPENAI_MODEL=gpt-4
 
 # Database Configuration
-DATABASE_URL=sqlite:///./ielts_bot.db
+DATABASE_URL=postgresql+asyncpg://ielts_user:password@localhost:5432/ielts_bot
+
+# PostgreSQL Configuration
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_DB=ielts_bot
+POSTGRES_USER=ielts_user
+POSTGRES_PASSWORD=password
+
+# Database Pool Configuration (optional)
+DB_POOL_SIZE=10
+DB_MAX_OVERFLOW=20
+DB_POOL_RECYCLE=3600
+DB_POOL_TIMEOUT=30
 
 # Application Configuration
 DEBUG=False
