--- a/.env.production
+++ b/.env.production
@@ -13,7 +13,20 @@ OPENROUTER_SITE_URL=https://ielts-telegram-bot.local
 OPENROUTER_SITE_NAME=IELTS Writing Bot
 
 # Database Configuration
-DATABASE_URL=sqlite+aiosqlite:///./data/ielts_bot.db
+DATABASE_URL=postgresql+asyncpg://ielts_user:secure_password@postgres:5432/ielts_bot
+
+# PostgreSQL Configuration
+POSTGRES_HOST=postgres
+POSTGRES_PORT=5432
+POSTGRES_DB=ielts_bot
+POSTGRES_USER=ielts_user
+POSTGRES_PASSWORD=secure_password
+
+# Database Pool Configuration
+DB_POOL_SIZE=15
+DB_MAX_OVERFLOW=25
+DB_POOL_RECYCLE=3600
+DB_POOL_TIMEOUT=30
 
 # Application Configuration
 DEBUG=False
