--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 aiogram==3.21.0
-openai==1.12.0
+openai>=1.50.0
 sqlalchemy>=2.0.30
 fastapi==0.109.2
 uvicorn==0.27.1
 python-dotenv==1.0.1
 alembic==1.13.1
 aiosqlite==0.19.0
+asyncpg==0.30.0
+psycopg2-binary==2.9.9
 python-multipart==0.0.9
 pytest==8.0.0
 pytest-asyncio==0.23.5
