feat: Implement MongoDB analytics service and update bot to connect for analytics

--- a/.env.example
+++ b/.env.example
@@ -1,34 +1,27 @@
 # Telegram Bot Configuration
 TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
+ADMIN_ID=your_telegram_user_id_here
 
-# OpenAI Configuration
-OPENAI_API_KEY=your_openai_api_key_here
-OPENAI_MODEL=gpt-4
+# OpenAI/OpenRouter Configuration
+OPENAI_API_KEY=your_openrouter_api_key_here
+OPENAI_MODEL=meta-llama/llama-3.1-8b-instruct:free
+OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
+OPENROUTER_SITE_URL=https://ielts-telegram-bot.local
+OPENROUTER_SITE_NAME=IELTS Writing Bot
 
-# Database Configuration
-DATABASE_URL=postgresql+asyncpg://ielts_user:password@localhost:5432/ielts_bot
+# Database Configuration (PostgreSQL - currently disabled)
+POSTGRES_PASSWORD=your_postgres_password_here
 
-# PostgreSQL Configuration
-POSTGRES_HOST=localhost
-POSTGRES_PORT=5432
-POSTGRES_DB=ielts_bot
-POSTGRES_USER=ielts_user
-POSTGRES_PASSWORD=password
-
-# Database Pool Configuration (optional)
-DB_POOL_SIZE=10
-DB_MAX_OVERFLOW=20
-DB_POOL_RECYCLE=3600
-DB_POOL_TIMEOUT=30
+# MongoDB Configuration
+MONGO_ROOT_USER=admin
+MONGO_ROOT_PASSWORD=your_mongodb_password_here
 
 # Application Configuration
-DEBUG=False
+DEBUG=false
 LOG_LEVEL=INFO
-
-# Rate Limiting Configuration
 DAILY_SUBMISSION_LIMIT=3
 PRO_DAILY_LIMIT=50
 
 # API Configuration
 API_HOST=0.0.0.0
-API_PORT=8000
+API_PORT=8080
